fix(console): align bring your ui card background in dark mode

--- a/packages/console/src/pages/SignInExperience/PageContent/Branding/CustomUiForm/index.module.scss
+++ b/packages/console/src/pages/SignInExperience/PageContent/Branding/CustomUiForm/index.module.scss
@@ -14,7 +14,7 @@
   padding: _.unit(4);
   border: 1px solid rgba(93, 52, 242, 12%);
   border-radius: _.unit(3);
-  background: rgba(93, 52, 242, 4%);
+  background: var(--color-layer-2);
 
   .ossCardContent {
     display: flex;
